# NHTTC

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/nativefd/lib/: nfd.lib
scenes/: 1v1_dd.scn  1v1_v.scn  2v1_dd.scn  2v1_v.scn  5circle_a.scn  5circle_acar.scn  5circle_add.scn  5circle_car.scn  5circle_dd.scn  5circle_v.scn  large.scn  many_blues.scn  many_cars.scn  many_cars_big_pusher.scn  many_cars_big_pusher_crowded.scn  many_cars_one_pusher.scn  many_cars_two_pusher.scn  many_graycars.scn  many_smoothcars.scn  multi_model_circle.scn  wall.scn
src/: CMakeLists.txt
src/nhttc_interface/: CMakeLists.txt  nhttc_interface.cpp  nhttc_interface.h
src/nhttc_opengl/: CMakeLists.txt  nhttc_sim.cpp  nhttc_sim.h  opengl_utils.cpp  opengl_utils.h  run_nhttc.cpp  test_utils.cpp  test_utils.h
src/nhttc_opengl/shaders/: fragShaderPt.glsl  vertShaderPt.glsl
src/sgd/: CMakeLists.txt  sgd.cpp  sgd.h  ttc_obstacles.cpp  ttc_obstacles.h  ttc_sgd_problem.cpp  ttc_sgd_problem.h  ttc_sgd_problem_models.cpp  ttc_sgd_problem_models.h
